🚨 Add Drift Detection Slack Alert (#1368)

--- a/.github/workflows/management-account-plan.yml
+++ b/.github/workflows/management-account-plan.yml
@@ -8,6 +8,8 @@ on:
       - ".github/workflows/management-account-plan.yml"
       - ".github/workflows/management-account-apply.yml"
   workflow_dispatch:
+  schedule:
+    - cron: "0 8 * * 1"
 
 jobs:
   plan:
@@ -32,7 +34,50 @@ jobs:
         continue-on-error: true
       - run: terraform init
       - run: terraform validate -no-color
+
       - name: Terraform plan
+        id: plan
         run: |
           set -o pipefail
-          terraform plan | ../../scripts/redaction.sh
+          terraform plan -detailed-exitcode | ../../scripts/redaction.sh
+
+      - name: Alert Slack if drift detected on scheduled run
+        if: ${{ (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') && steps.plan.outputs.exitcode == '2' }}
+        uses: slackapi/slack-github-action@91efab103c0de0a537f72a35f6b8cda0ee76bf0a # v2.1.1
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: webhook-trigger
+          payload: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": ":old-man-yells-at-terraform: *Terraform Drift Detected!* \n\nDrift has been detected in the repository *<https://github.com/${{ github.repository }}|${{ github.repository }}>*. To correct the drift, re-apply the latest terraform code or update the code.\n\n*Workflow:* `${{ github.workflow }}`"
+                  }
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "View Workflow"
+                      },
+                      "url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+                      "style": "primary"
+                    },
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "Apply management-account"
+                      },
+                      "url": "https://github.com/ministryofjustice/aws-root-account/actions/workflows/management-account-apply.yml"
+                    }
+                  ]
+                }
+              ]
+            }
